syntax = "proto3";

package cr8r.services;

import "services/jobs/find.proto";

service Jobs {
    rpc FindJobs (PFindJobsRequest) returns (PFindJobsReply);
}
